Add support for multiple running instances of statsd, change user who owns the logging dir, add deleteIdleStats property to the config for future proxy support.

--- a/templates/localConfig.js.erb
+++ b/templates/localConfig.js.erb
@@ -6,8 +6,10 @@
 , graphiteHost: "<%= @graphiteserver %>"
 , address: "<%= @address %>"
 , port: "<%= @listenport %>"
+, mgmt_port: "<%= @adminport %>"
 , flushInterval: "<%= @flushinterval %>"
 , percentThreshold: [<%= @percentthreshold.join(', ') %>]
+, deleteIdleStats: "<%= @deleteidlestats  %>"
 <% @config.each do |k, v| -%>
 , <%= k %>: <%= v %>
 <% end -%>
